fixed width on election results so percentage doesn't wrap

--- a/app/assets/stylesheets/specials/election.css.scss
+++ b/app/assets/stylesheets/specials/election.css.scss
@@ -1,4 +1,4 @@
-// Keep this file here to support hard-coded results tables in
+  // Keep this file here to support hard-coded results tables in
 // Flatpages.
 
 .hero-election {
@@ -259,7 +259,7 @@
 }
 
 .hero-election .results .results-block .initiative.condensed.local .result .yes, .hero-election .results .results-block .initiative.condensed.local .result .no {
-  width: 40px;
+  width: 50px;
 }
 
 .hero-election .results .results-block .initiative.condensed.local .result strong {
